--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <script src="./js/main.js" type="module"></script>
   <script src="./vendor/pristine/pristine.min.js"></script>
+  <script src="./vendor/nouislider/nouislider.js"></script>
+  <link rel="stylesheet" href="vendor/nouislider/nouislider.css">
   <title>Кекстаграм</title>
 </head>
 
